--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.data.elasticsearch.cluster-nodes=localhost:9300
 spring.data.elasticsearch.cluster-name=docker-cluster
 
 spring.jackson.serialization.write_dates_as_timestamps=false
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.properties.spring.json.add.type.headers=false
