--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,17 @@ services:
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - "cluster.name=docker-cluster"
       - "discovery.type=single-node"
+  zookeeper:
+    image: wurstmeister/zookeeper:latest
+    ports:
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka:1.0.0
+    ports:
+      - "9092:9092"
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: "kafka"
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_CREATE_TOPICS: "streams-json-input:1:1:compact,streams-json-output:1:1:compact"
