Revert to Boot 2.3.6 due to yet missing Spring Cloud support for Boot 2.4.0, add Spring Cloud Kafka showcase

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,4 +40,4 @@ services:
     environment:
       KAFKA_ADVERTISED_HOST_NAME: "kafka"
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-      KAFKA_CREATE_TOPICS: "streams-json-input:1:1:compact,streams-json-output:1:1:compact"
+      KAFKA_CREATE_TOPICS: "streams-json-input:1:1:compact,streams-json-output:1:1:compact,first:1:1:compact,second:1:1:compact,test-streams-streams-json-store-repartition:1:1:compact"
