--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,12 @@ spring.data.elasticsearch.cluster-name=docker-cluster
 spring.jackson.serialization.write_dates_as_timestamps=false
 
 spring.kafka.bootstrap-servers=localhost:9092
+
 spring.kafka.producer.properties.spring.json.add.type.headers=false
+
+spring.cloud.stream.kafka.binder.autoCreateTopics: false
+spring.cloud.stream.function.definition: producer;processor;consumer
+spring.cloud.stream.bindings.producer-out-0.destination: first
+spring.cloud.stream.bindings.processor-in-0.destination: first
+spring.cloud.stream.bindings.processor-out-0.destination: second
+spring.cloud.stream.bindings.consumer-in-0.destination: second
