--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.kafka.bootstrap-servers=localhost:9092
 
 spring.kafka.producer.properties.spring.json.add.type.headers=false
 
+spring.cloud.stream.poller.initialDelay=10000
+
 spring.cloud.stream.kafka.binder.autoCreateTopics: false
 spring.cloud.stream.function.definition: producer;processor;consumer
 spring.cloud.stream.bindings.producer-out-0.destination: first
