--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,4 +40,5 @@ services:
     environment:
       KAFKA_ADVERTISED_HOST_NAME: "127.0.0.1"
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       KAFKA_CREATE_TOPICS: "streams-json-input:1:1,streams-json-output:1:1,first:1:1,second:1:1,test-streams-streams-json-store-repartition:1:1"
