Remove grep(s) in Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ services:
   - docker
 
 script:
-  - mvn clean package | grep -v Download
+  - mvn clean package
   - docker-compose up -d
-  - mvn clean verify -Pdocker | grep -v Download
-  - mvn clean package -Pbuild-for-docker -DskipTests | grep -v Download
+  - mvn clean verify -Pdocker
+  - mvn clean package -Pbuild-for-docker -DskipTests
   - docker build -t mleenso/stackoverflow .
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push mleenso/stackoverflow
