--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.kafka.producer.properties.spring.json.add.type.headers=false
 
 spring.cloud.stream.kafka.binder.autoCreateTopics: false
 
-spring.cloud.stream.function.definition: producer;processor;consumer
+spring.cloud.stream.function.definition: producer;processor;consumer;concatHash;concatStar
 
 spring.cloud.stream.bindings.processor-in-0.destination: first
 spring.cloud.stream.bindings.processor-out-0.destination: second
