Fix message validation issue

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,2 +1,3 @@
+spring.kafka.bootstrap-servers=localhost:9092
 spring.cloud.stream.kafka.binder.autoCreateTopics: true
 spring.cloud.stream.kafka.binder.autoAddPartitions: true
