--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,13 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.properties.spring.json.add.type.headers=false
 
 spring.cloud.stream.kafka.binder.autoCreateTopics: false
+spring.cloud.stream.kafka.streams.binder.configuration.commit.interval.ms: 1000
 
-spring.cloud.stream.function.definition: producer;processor;consumer;concatHash;concatStar
+spring.cloud.stream.function.definition: producer;processor;consumer;concatHash;concatStar;process
 
 spring.cloud.stream.bindings.processor-in-0.destination: first
 spring.cloud.stream.bindings.processor-out-0.destination: second
 spring.cloud.stream.bindings.consumer-in-0.destination: second
+
+spring.cloud.stream.bindings.process-in-0.destination=words
+spring.cloud.stream.bindings.process-out-0.destination=counts
