--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.kafka.producer.properties.spring.json.add.type.headers=false
 
 spring.cloud.stream.kafka.binder.autoCreateTopics: false
 spring.cloud.stream.kafka.streams.binder.configuration.commit.interval.ms: 1000
+# See https://github.com/spring-cloud/spring-cloud-stream-samples/issues/149
+spring.cloud.stream.kafka.streams.binder.configuration.default.key.serde: org.apache.kafka.common.serialization.Serdes$StringSerde
+spring.cloud.stream.kafka.streams.binder.configuration.default.value.serde: org.apache.kafka.common.serialization.Serdes$StringSerde
 
 spring.cloud.stream.function.definition: producer;processor;consumer;concatHash;concatStar;process
 
