--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.5.RELEASE</version>
+		<version>2.4.1</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -241,7 +241,7 @@
 					<allContainers>true</allContainers>
 					<images>
 						<image>
-							<name>elasticsearch:7.6.2</name>
+							<name>elasticsearch:7.9.3</name>
 							<alias>elasticsearch</alias>
 							<run>
 								<stopMode>kill</stopMode>
