--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,33 +1,33 @@
-spring.application.name: stackoverflow
-spring.jackson.serialization.write_dates_as_timestamps: false
-
 management:
   endpoints.web.exposure.include: '*'
   endpoint:
     mappings.enabled: true
     health.show-details: always
 
-spring.data.elasticsearch:
-  repositories.enbled: true
-  cluster-nodes: localhost:9300
-  cluster-name: docker-cluster
-
-spring.json.remove.type.headers: true
-spring.json.use.type.headers: false
-
-spring.cloud.stream:
-  function.definition: processor;consumer;concatHash;concatStar;process
-  bindings:
-    processor-in-0.destination: first
-    processor-out-0.destination: second
-    consumer-in-0.destination: second
-    process-in-0.destination: words
-    process-out-0.destination: counts
-  kafka.default.consumer.trustedPackages: '*'
-  kafka.streams:
-    default.consumer:
-      deserializationExceptionHandler: sendToDlq
-    binder:
-      autoCreateTopics: false
-      configuration:
-        commit.interval.ms: 1000
+spring:
+  application.name: stackoverflow
+  jackson.serialization.write_dates_as_timestamps: false
+  data.elasticsearch:
+    repositories.enbled: true
+    cluster-nodes: localhost:9300
+    cluster-name: docker-cluster
+  json:
+    remove.type.headers: true
+    use.type.headers: false
+  cloud.stream:
+    function.definition: processor;consumer;concatHash;concatStar;process
+    bindings:
+      processor-in-0.destination: first
+      processor-out-0.destination: second
+      consumer-in-0.destination: second
+      process-in-0.destination: words
+      process-out-0.destination: counts
+    kafka:
+      default.consumer.trustedPackages: '*'
+      streams:
+        default.consumer:
+          deserializationExceptionHandler: sendToDlq
+        binder:
+          autoCreateTopics: false
+          configuration:
+            commit.interval.ms: 1000
