--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,9 +9,33 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Java 11
       uses: actions/setup-java@v1.4.3
       with:
         java-version: 11
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
     - name: Build with Maven
       run: mvn -B verify --file pom.xml
+
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        context: ./
+        file: ./Dockerfile
+        push: true
+        tags: mleenso/stackoverflow:latest
+
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
