--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,6 +15,9 @@ jobs:
       with:
         java-version: 11
 
+    - name: Install Graphviz
+      run: sudo apt install graphviz
+
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
