--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,12 @@ jobs:
     - name: Build with Maven
       run: mvn -B verify --file pom.xml
 
+    - name: Deploy docs
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./target/generated-docs
+
     - name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v1
