Connect to AWS S3

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,8 @@ spring:
           autoCreateTopics: false
           configuration:
             commit.interval.ms: 1000
+
+amazon:
+  s3:
+    access-key: replace
+    secret-key: replace
