--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,6 +13,7 @@ jobs:
     - name: Set up Java 17
       uses: actions/setup-java@v2
       with:
+        distribution: temurin
         java-version: 17
 
     - name: Install Graphviz
