--- a/pom.xml
+++ b/pom.xml
@@ -317,6 +317,7 @@
 										<method>GET</method>
 										<status>200</status>
 									</http>
+									<time>20000</time>
 								</wait>
 							</run>
 						</image>
